# diri-planner-1.5

./: .coverage  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose-dev.yaml  docker-compose.prod.yaml  main.py  nginx.conf  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci.yaml  dependency-update.yaml
config/: settings.py  urls.py
core/: urls.py
core/admin/: __init__.py  application_admin.py  attribute_admin.py  organisation_admin.py
core/fixtures/: current_data.json  test_data.json
core/forms/: __init__.py
core/migrations/: 0001_initial.py  0002_add_organisations_to_application.py
core/models/: __init__.py  application.py  attribute.py  base.py  base_model.py  organisation.py
core/static/css/: application.css
core/templates/core/: application_confirm_delete.html  application_detail.html  application_form.html  application_list.html  base.html
core/tests/: test_application_integration.py  test_application_model.py  test_application_views.py  test_attribute_model.py  test_home_redirect.py  test_organisation_model.py
core/views/: application_crud.py  application_list_view.py  application_views.py
docs/: APPLICATION_SLUG_FIELD.md  ATTRIBUTE_DYNAMIC_FORM.md  ATTRIBUTE_DYNAMIC_FORM_NO_JS.md  DYNAMIC_FORMS_SETUP.md  REUSABLE_DYNAMIC_FORMS_PATTERN.md  TREE_MIGRATION_TO_FAST_TREENODE.md
