[project]
name = "diri-planner-1-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-db>=0.0.7",
    "django-debug-toolbar>=6.0.0",
    "django-dynamic-admin-forms>=3.2.10",
    "django-fast-treenode>=1.0.0",
    "neapolitan>=24.11",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
]
