[project]
name = "diri-planner-1-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-db>=0.0.7",
    "django-debug-toolbar>=6.0.0",
    "django-dynamic-admin-forms>=3.2.10",
    "django-fast-treenode>=1.0.0",
    "gunicorn>=21.2.0",
    "neapolitan>=24.11",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "coverage>=7.0.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)
exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
    "staticfiles",
]

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | __pycache__
  | staticfiles
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = ["migrations", ".venv"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
